destrule-envoy-to-envoy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dst-envoy-httpbin
spec:
  host:  httpbin-demo.istio-demo.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
      subjectAltNames: 
      - spiffe://aporeto-tme/kubecon-2019/kubecon-istio/istio-demo/httpbin-demo-vtgmj
